# oauth_reminder

./: Makefile  README.md  pyproject.toml  setup.sh
infra/: backend.tf  cloudwatch.tf  dynamo.tf  iam.tf  lambda.tf  locals.tf  secrets.tf
oauth_reminder/: __main__.py  config.py  lambda_function.py
pythonlambdatemplate/: __main__.py
