[tool.poetry]
name = "oauth_reminder"
version = "0.1.0"
description = ""
authors = ["Matthew Tondreau <mmtondreau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.41"
requests = "^2.28.1"
pydantic = "^1.10.4"
tda_tonberry_trader = { git = "git@github.com:tonberry-org/tda_tonberry_trader.git", branch = "main" }
slack_bot_client = { git = "git@github.com:tonberry-org/slack_bot_client.git", branch = "main" }
slack-sdk = "^3.19.5"
common = { git = "git@github.com:tonberry-org/common.git", branch = "main" }

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"
black = "^22.12.0"
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
coverage = "^7.0.2"
newrelic = "^8.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
